[project]
name = "til-25-rl-zoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium==1.1.1",
    "mazelib==0.9.16",
    "pettingzoo==1.25.0",
    "pygame>=2.1.3",
    "rich>=14.0.0",
    "sb3-contrib>=2.6.0",
    "stable-baselines3>=2.6.0",
    "supersuit==3.9.3",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
